<resources>
    <string name="app_name">Virtual Psychologist</string>
    <string name="q1">האם אתה מעיר לאחרים או מאשים ללא מחשבה מוקדמת ואחר כך מצטער על כך?</string>
    <string name="q2">כאשר אחרים נעשים חסרי מנוחה, האם אתה נשאר די רגוע ?</string>
    <string name="q3">האם אתה מעלעל בלוחות זמנים של רכבות, מדריכי טלפונים, או מילונים רק לשם ההנאה שבדבר ?</string>
    <string name="q4">כאשר אתה מתבקש לקבל החלטה, האם אתה מושפע ממידת החיבה או חוסר החיבה שיש לך כלפי האישיות המעורבת ?</string>
    <string name="q5">האם בשל חשש לפגוע במישהו תימנע מלברר אתו עניין הקשור בעבודה ?</string>
    <string name="q6">האם בעבודתך אתה מוצא עצמך מאבד את הריכוז כשאין סיבה הגיונית לכך?</string>
    <string name="q7">האם פעולותיך נחשבות בלתי צפויות בעיני אחרים?</string>
    <string name="btnText">שלח</string>
    <string name="forerAnswer">יש לך צורך שאנשים אחרים יאהבו ויעריצו אותך, אך אתה נוטה להיות ביקורתי כלפי עצמך. אף על פי שיש לך כמה חולשות אנושיות, אתה מסוגל בדרך כלל לפצות עליהן. יש לך יכולות רבות שאינך משתמש בהן ושלא ניצלת לתועלתך. אמנם כלפי חוץ אתה נראה בעל משמעת ושליטה עצמית, אך בתוכך אתה נוטה להיות מודאג וחסר ביטחון. לעתים יש לך ספקות אם קיבלת את ההחלטות הנכונות או את הדבר הנכון. אתה מעדיף מידה של שינוי וגיוון ומאבד את הסיפוק כאשר מוטלים הגבלות ואיסורים על פעולתך. אתה גם מתגאה ביכולתך לחשוב באופן עצמאי, ואינך מקבל את הצהרותיהם של אנשים אחרים בלי שתינתנה לך הוכחות מספקות. למרות זאת גילית כי לפעמים לא כדאי להיות גלוי מדי בפני אחרים. לעתים, אתה מתנהג באופן מוחצן וחברותי ומפגין חיבה לאחרים, אך במקרים אחרים אתה מופנם, מהוסס ומרוחק. חלק משאיפותיך נוטות להיות לא מציאותיות.</string>
</resources>